src/components/Agencement/footer.scss
.footer {
    width: 100%;
    height: 209px;
    background-color: black;  
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;

    @include mediamobile() {
        gap: 15px;
    }

    &__text {
        display: flex;
        font-size: 18px;

        @include mediamobile() {
            font-size: 13px;
            margin-top: 0;
            width: 8em;
        }
    }
}

